--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.binding.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.binding.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Binding:class'
     summary: |-
-      <span data-ttu-id="1883b-101">表示工作簿中定义的 Office.js 绑定。</span><span class="sxs-lookup"><span data-stu-id="1883b-101">Represents an Office.js binding that is defined in the workbook.</span></span>
+      表示工作簿中定义的 Office.js 绑定。
 
-      <span data-ttu-id="1883b-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1883b-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Binding
     fullName: Excel.Binding
     langs:
@@ -27,7 +27,7 @@ items:
       - 'excel!Excel.Binding#toJSON:member(1)'
       - 'excel!Excel.Binding#type:member'
   - uid: 'excel!Excel.Binding#context:member'
-    summary: <span data-ttu-id="1883b-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="1883b-103">The request context associated with the object.</span></span> <span data-ttu-id="1883b-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="1883b-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -40,9 +40,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.Binding#getRange:member(1)'
     summary: |-
-      <span data-ttu-id="1883b-105">返回绑定表示的区域。</span><span class="sxs-lookup"><span data-stu-id="1883b-105">Returns the range represented by the binding.</span></span> <span data-ttu-id="1883b-106">如果绑定类型不正确，将引发错误。</span><span class="sxs-lookup"><span data-stu-id="1883b-106">Will throw an error if binding is not of the correct type.</span></span>
+      返回绑定表示的区域。 如果绑定类型不正确，将引发错误。
 
-      <span data-ttu-id="1883b-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1883b-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getRange()
     fullName: getRange()
     langs:
@@ -56,7 +56,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="1883b-108">示例</span><span class="sxs-lookup"><span data-stu-id="1883b-108">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -75,9 +75,9 @@ items:
           ```
   - uid: 'excel!Excel.Binding#getTable:member(1)'
     summary: |-
-      <span data-ttu-id="1883b-109">返回绑定表示的表。</span><span class="sxs-lookup"><span data-stu-id="1883b-109">Returns the table represented by the binding.</span></span> <span data-ttu-id="1883b-110">如果绑定类型不正确，将引发错误。</span><span class="sxs-lookup"><span data-stu-id="1883b-110">Will throw an error if binding is not of the correct type.</span></span>
+      返回绑定表示的表。 如果绑定类型不正确，将引发错误。
 
-      <span data-ttu-id="1883b-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1883b-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getTable()
     fullName: getTable()
     langs:
@@ -91,7 +91,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="1883b-112">示例</span><span class="sxs-lookup"><span data-stu-id="1883b-112">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -110,9 +110,9 @@ items:
           ```
   - uid: 'excel!Excel.Binding#getText:member(1)'
     summary: |-
-      <span data-ttu-id="1883b-113">返回绑定表示的文本。</span><span class="sxs-lookup"><span data-stu-id="1883b-113">Returns the text represented by the binding.</span></span> <span data-ttu-id="1883b-114">如果绑定类型不正确，将引发错误。</span><span class="sxs-lookup"><span data-stu-id="1883b-114">Will throw an error if binding is not of the correct type.</span></span>
+      返回绑定表示的文本。 如果绑定类型不正确，将引发错误。
 
-      <span data-ttu-id="1883b-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1883b-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getText()
     fullName: getText()
     langs:
@@ -126,7 +126,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="1883b-116">示例</span><span class="sxs-lookup"><span data-stu-id="1883b-116">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -145,9 +145,9 @@ items:
           ```
   - uid: 'excel!Excel.Binding#id:member'
     summary: |-
-      <span data-ttu-id="1883b-117">表示绑定标识符。</span><span class="sxs-lookup"><span data-stu-id="1883b-117">Represents binding identifier.</span></span> <span data-ttu-id="1883b-118">只读。</span><span class="sxs-lookup"><span data-stu-id="1883b-118">Read-only.</span></span>
+      表示绑定标识符。 只读。
 
-      <span data-ttu-id="1883b-119">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1883b-119">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -159,7 +159,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.Binding#load:member(1)'
-    summary: <span data-ttu-id="1883b-120">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="1883b-120">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="1883b-121">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="1883b-121">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -173,11 +173,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="1883b-122">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="1883b-122">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.BindingLoadOptions:interface'
   - uid: 'excel!Excel.Binding#load:member(2)'
-    summary: <span data-ttu-id="1883b-123">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="1883b-123">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="1883b-124">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="1883b-124">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -191,7 +191,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="1883b-125">示例</span><span class="sxs-lookup"><span data-stu-id="1883b-125">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -209,11 +209,11 @@ items:
           ```
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="1883b-126">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="1883b-126">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.Binding#load:member(3)'
-    summary: <span data-ttu-id="1883b-127">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="1883b-127">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="1883b-128">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="1883b-128">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -231,7 +231,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="1883b-129">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="1883b-129">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -240,9 +240,9 @@ items:
                       }
   - uid: 'excel!Excel.Binding#onDataChanged:member'
     summary: |-
-      <span data-ttu-id="1883b-130">当绑定内的数据或格式变化时发生。</span><span class="sxs-lookup"><span data-stu-id="1883b-130">Occurs when data or formatting within the binding is changed.</span></span>
+      当绑定内的数据或格式变化时发生。
 
-      <span data-ttu-id="1883b-131">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1883b-131">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: onDataChanged
     fullName: onDataChanged
     langs:
@@ -256,7 +256,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="1883b-132">示例</span><span class="sxs-lookup"><span data-stu-id="1883b-132">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```typescript
           await Excel.run(async (context) => {
@@ -272,9 +272,11 @@ items:
           ```
   - uid: 'excel!Excel.Binding#onSelectionChanged:member'
     summary: |-
-      <span data-ttu-id="1883b-133">当绑定中的所选内容更改时发生。</span><span class="sxs-lookup"><span data-stu-id="1883b-133">Occurs when the selected content in the binding is changed.</span></span>
+      当绑定中的所选内容更改时发生。
 
-      <span data-ttu-id="1883b-134">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1883b-134">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      **注意**：如果选择了多个不连续的`Binding.onSelectionChanged`单元格，则仅报告一个选定内容的行和列信息。 `Worksheet.onSelectionChanged`用于多个选定区域。
+
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: onSelectionChanged
     fullName: onSelectionChanged
     langs:
@@ -286,7 +288,7 @@ items:
         type:
           - 'excel!Excel.Binding#onSelectionChanged~0:complex'
   - uid: 'excel!Excel.Binding#toJSON:member(1)'
-    summary: '<span data-ttu-id="1883b-135">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="1883b-135">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="1883b-136">.</span><span class="sxs-lookup"><span data-stu-id="1883b-136"></span></span> <span data-ttu-id="1883b-137">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="1883b-137"></span></span><!-- --><span data-ttu-id="1883b-138">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel. Binding 对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.BindingData`</span><span class="sxs-lookup"><span data-stu-id="1883b-138">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.Binding object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.BindingData`</span></span><!-- --><span data-ttu-id="1883b-139">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="1883b-139">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel. Binding 对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.BindingData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -300,9 +302,9 @@ items:
         description: ''
   - uid: 'excel!Excel.Binding#type:member'
     summary: |-
-      <span data-ttu-id="1883b-140">返回绑定的类型。</span><span class="sxs-lookup"><span data-stu-id="1883b-140">Returns the type of the binding.</span></span> <span data-ttu-id="1883b-141">有关详细信息，请参阅 BindingType。</span><span class="sxs-lookup"><span data-stu-id="1883b-141">See Excel.BindingType for details.</span></span> <span data-ttu-id="1883b-142">只读。</span><span class="sxs-lookup"><span data-stu-id="1883b-142">Read-only.</span></span>
+      返回绑定的类型。 有关详细信息，请参阅 BindingType。 只读。
 
-      <span data-ttu-id="1883b-143">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1883b-143">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
