--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.bindingselectionchangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.bindingselectionchangedeventargs.yml
@@ -2,9 +2,11 @@
 items:
   - uid: 'excel!Excel.BindingSelectionChangedEventArgs:interface'
     summary: |-
-      <span data-ttu-id="b8aaf-101">提供有关引发了 SelectionChanged 事件的绑定的信息。</span><span class="sxs-lookup"><span data-stu-id="b8aaf-101">Provides information about the binding that raised the SelectionChanged event.</span></span>
+      提供有关引发 "SelectionChanged" 事件的选定内容的信息。
 
-      <span data-ttu-id="b8aaf-102">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8aaf-102">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      **注意**：如果选择了多个不连续的`Binding.onSelectionChanged`单元格，则仅报告一个选定内容的行和列信息。 `Worksheet.onSelectionChanged`用于多个选定区域。
+
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.BindingSelectionChangedEventArgs
     fullName: Excel.BindingSelectionChangedEventArgs
     langs:
@@ -19,9 +21,9 @@ items:
       - 'excel!Excel.BindingSelectionChangedEventArgs#startRow:member'
   - uid: 'excel!Excel.BindingSelectionChangedEventArgs#binding:member'
     summary: |-
-      <span data-ttu-id="b8aaf-103">获取表示引发了 SelectionChanged 事件的绑定的 Binding 对象。</span><span class="sxs-lookup"><span data-stu-id="b8aaf-103">Gets the Binding object that represents the binding that raised the SelectionChanged event.</span></span>
+      获取表示引发了 SelectionChanged 事件的绑定的 Binding 对象。
 
-      <span data-ttu-id="b8aaf-104">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8aaf-104">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: binding
     fullName: binding
     langs:
@@ -34,9 +36,9 @@ items:
           - 'excel!Excel.Binding:class'
   - uid: 'excel!Excel.BindingSelectionChangedEventArgs#columnCount:member'
     summary: |-
-      <span data-ttu-id="b8aaf-105">获取选择的列数。</span><span class="sxs-lookup"><span data-stu-id="b8aaf-105">Gets the number of columns selected.</span></span>
+      获取选择的列数。
 
-      <span data-ttu-id="b8aaf-106">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8aaf-106">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnCount
     fullName: columnCount
     langs:
@@ -49,9 +51,9 @@ items:
           - number
   - uid: 'excel!Excel.BindingSelectionChangedEventArgs#rowCount:member'
     summary: |-
-      <span data-ttu-id="b8aaf-107">获取选择的行数。</span><span class="sxs-lookup"><span data-stu-id="b8aaf-107">Gets the number of rows selected.</span></span>
+      获取选择的行数。
 
-      <span data-ttu-id="b8aaf-108">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8aaf-108">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowCount
     fullName: rowCount
     langs:
@@ -64,9 +66,9 @@ items:
           - number
   - uid: 'excel!Excel.BindingSelectionChangedEventArgs#startColumn:member'
     summary: |-
-      <span data-ttu-id="b8aaf-109">获取所选内容第一列的索引（从零开始）。</span><span class="sxs-lookup"><span data-stu-id="b8aaf-109">Gets the index of the first column of the selection (zero-based).</span></span>
+      获取所选内容第一列的索引（从零开始）。
 
-      <span data-ttu-id="b8aaf-110">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8aaf-110">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: startColumn
     fullName: startColumn
     langs:
@@ -79,9 +81,9 @@ items:
           - number
   - uid: 'excel!Excel.BindingSelectionChangedEventArgs#startRow:member'
     summary: |-
-      <span data-ttu-id="b8aaf-111">获取选择的第一行的索引（基于零）。</span><span class="sxs-lookup"><span data-stu-id="b8aaf-111">Gets the index of the first row of the selection (zero-based).</span></span>
+      获取选择的第一行的索引（基于零）。
 
-      <span data-ttu-id="b8aaf-112">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b8aaf-112">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: startRow
     fullName: startRow
     langs:
